--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Szymon-Lurka/ticket-app/issues"
   },
-  "homepage": "https://github.com/Szymon-Lurka/ticket-app#readme"
+  "homepage": "https://github.com/Szymon-Lurka/ticket-app#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0"
+  }
 }
